Added refactoring tools

--- a/architectureapp.html
+++ b/architectureapp.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<applet code = "ArchitectureApp.class" width = "700" height = "600">
+<applet code = "ArchitectureApp.class" archive = "arch.jar" width = "700" height = "600">
 </applet>
 </body>
 </html>
