help facility for MathApp

--- a/agileuml.html
+++ b/agileuml.html
@@ -1,6 +1,8 @@
 <html>
 <body>
-<applet code = "AgileUMLApp.class" width = "300" height = "400">
+<applet code = "AgileUMLApp.class" 
+        archive = "agileuml.jar" 
+        width = "600" height = "600">
 </applet>
 </body>
 </html>
